# ssh-mcp

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
ssh_mcp/: __init__.py  py.typed  server.py
